--- a/SWshop.MVC/Views/Home/Index.cshtml
+++ b/SWshop.MVC/Views/Home/Index.cshtml
@@ -1,31 +1,51 @@
-﻿@{
-    ViewBag.Title = "Home Page";
+﻿@model IEnumerable<SWshop.MVC.ViewModels.ProductViewModel>
+
+@{
+    ViewBag.Title = "SW Shop";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+<div class="container">
+    <div class="row">
+        
+        @foreach (var item in Model)
+        {
+            <div class="col-xs-3 col-md-2">
+                <div class="thumbnail">
+                    <div class="caption text-center">
+                        <p>
+                            <input type="hidden" id="@item.Id" name="Name" value="@item.Name"/>
+                            <b>Name:</b> <span>@item.Name</span>
+                        </p>
+                        <p>
+                            <b>Price:</b> <span>@item.Price</span>
+                        </p>
+                        <p class="text-center">
+                            <button class="btn btn-info" name="addToCartBtn" id="@item.Id" onclick="addToCart(@item.Id)">Add to cart</button>
+                            @*@Html.ActionLink("Add to cart", "AddToCart", "Cart", new {id = item.Id}, new {@class = "btn btn-info"})*@
+                        </p>
+                    </div>
+                </div>
+            </div>
+        }
+
+    </div>
 </div>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
-</div>
+
+@section scripts
+{
+    <script>
+        function addToCart(id) {
+            
+            $.ajax({
+                url: '@Url.Action("AddToCart", "Cart")/' + id, success: function (result) {
+
+                    $(window.cartCount).html(result);
+
+                    window.showAlert( $("#"+id).val() + " added to cart!");
+                }
+            });
+
+        }
+    </script>
+}
